--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -16,7 +16,7 @@
 
 {% block content %}
 
-	   <h1 class="ui header">{{ title }}</h1>
+{#	   <h1 class="ui header">{{ title }}</h1>#}
 
     {% if current_user.is_authenticated %}
         <h2 class="ui header">Hi {{ current_user.name }}!</h2>
