--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -19,6 +19,7 @@
 			    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
 				<!-- Custom CSS -->
 				<link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
+                <script src="{{ url_for('static', filename='js/position.js') }}"></script>
 				<!-- Browser tab name -->
 				<title>{{ title }}</title>
 				<!-- Navbar -->
