--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -46,7 +46,7 @@
             map = new google.maps.Map(
                 mapElem,
                 {
-                    center: {lat: 40.0, lng: -75.0},
+                    center: getPosition(),
                     zoom: 12,
                     mapTypeControlOptions: {
                         mapTypeIds: ['Map']
