--- a/app/templates/map.html
+++ b/app/templates/map.html
@@ -7,16 +7,11 @@
     <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.js'></script>
     <!-- Leaflet CSS -->
     <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.9/mapbox.css' rel='stylesheet'/>
-    <!-- Map style -->
-    <style>
-    #map {
-    	height: 600px;
-    }
-    </style>
 {% endblock %}
 
 {% block content %}
 
     {{ m.map() }}
 
+    {% block map_mod %}{% endblock %}
 {% endblock %}
