Add makers variable for future

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -35,7 +35,8 @@
 
     <script type="text/javascript">
         var map;
-
+        var markers = [];
+        
         function initMap() {
             const styledMapType = new google.maps.StyledMapType(
                 map_style,
