--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -20,6 +20,7 @@
 				<!-- Custom CSS -->
 				<link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
                 <script src="{{ url_for('static', filename='js/position.js') }}"></script>
+                <script src="{{ url_for('static', filename='js/markers.js') }}"></script>
 				<!-- Browser tab name -->
 				<title>{{ title }}</title>
 				<!-- Navbar -->
