--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -7,6 +7,7 @@
 				<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'/>
 				<meta charset="UTF-8">
 				<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 				<!-- jQuery -->
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 				<!-- Semantic Main CSS -->
